wip: doc fixes
